* Bug #32613: adjust links in footer of ucs overview
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45225 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -75,8 +75,8 @@
 							<li class="item col-md-6 warning">
 								<span class="wrapper">
 									<span class="icon"></span>
-									<span class="title" data-i18n="noServiceTitle">JavaScript required</span>
-									<span class="text" data-i18n="noServiceDescription">
+									<span class="title">JavaScript required</span>
+									<span class="text">
 										A browser with JavaScript enabled is required in order to use this service.
 										<!--[if IE]>
 										<br /><br />
@@ -108,21 +108,21 @@
 		<div class="bs-footer" id="footer" role="contentinfo">
 			<div class="container">
 				<ul>
-					<li><a href="#">Univention Wiki</a></li>
-					<li><a href="#">Univention Forum</a></li>
-					<li><a href="#">Univention Support Datenbank</a></li>
-					<li><a href="#">Handbuch zu Univention Corporate Server</a></li>
+					<li><a href="http://wiki.univention.de/" data-i18n="wiki">Univention Wiki</a></li>
+					<li><a href="http://forum.univention.de/" data-i18n="forum">Univention Forum</a></li>
+					<li><a href="http://sdb.univention.de/" data-i18n="sdb">Univention Support Database</a></li>
+					<li><a href="http://docs.univention.de/en.html" data-i18n="manual">Manual for Univention Corporate Server</a></li>
 				</ul>
 				<ul>
-					<li><a href="#">App Katalog</a></li>
-					<li><a href="#">Erg&auml;nzende Produkte</a></li>
-					<li><a href="#">L&ouml;sungen auf Basis von UCS</a></li>
+					<li><a href="http://www.univention.de/en/products/ucs/app-catalogue/" data-i18n="apps">App Catalogue</a></li>
+					<li><a href="http://www.univention.de/en/products/" data-i18n="products">Additional Products</a></li>
+					<li><a href="http://www.univention.de/en/ucs-solutions/" data-i18n="solutions">Solutions based on UCS</a></li>
 				</ul>
 				<ul>
-					<li><a href="#">Univention Website</a></li>
-					<li><a href="#">News</a></li>
-					<li><a href="#">Termine</a></li>
-					<li><a href="#">Univention Partner</a></li>
+					<li><a href="http://www.univention.de/en/" data-i18n="univention_website">Univention Website</a></li>
+					<li><a href="http://www.univention.de/en/univention/news/news-releases/" data-i18n="news">News</a></li>
+					<li><a href="http://www.univention.de/en/univention/dates/" data-i18n="dates">Dates</a></li>
+					<li><a href="http://www.univention.de/en/partner/" data-i18n="univention_partner">Univention Partners</a></li>
 				</ul>
 			</div>
     	</div>
