* Bug #30811: evaluate startup wizard input, add license activation dialogue
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45245 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/app/about.de.html
+++ b/management/univention-management-console-frontend/umc/app/about.de.html
@@ -1,4 +1,4 @@
-<h1>Univention Management Console</h1>
+<h1 id="dialog-about">Univention Management Console</h1>
 <table style='background:url({path}/about.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<tr>
 		<td>Server</td>
