--- a/management/univention-management-console-frontend/umc/app/activation.de.html
+++ b/management/univention-management-console-frontend/umc/app/activation.de.html
@@ -1,4 +1,4 @@
-<h1>Aktivierung von Univention Corporate Server</h1>
+<h1 id="dialog-activiation">Aktivierung von Univention Corporate Server</h1>
 <div style='background:url({path}/activation.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Sie können nun eine gültige E-Mail-Adresse angeben, um das UCS-System für die Verwendung des App Centers freizuschalten. Es wird Ihnen dann in Kürze ein aktualisierter Lizenzschlüssel zugeschickt, der über den Lizenzdialog im Einstellungsmenü eingespielt werden kann.</p>
 	<p>
@@ -6,6 +6,6 @@
 			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'E-Mail-Adresse'"/>
 		</form>
 	</p>
-	<p>Lassen Sie das Feld frei, um die Aktivierung zu einem späteren Zeitpunkt über das App Center selber durchzuführen.</p>
+	<p style="display:{leaveFieldFreeDisplay}">Lassen Sie das Feld frei, um die Aktivierung zu einem späteren Zeitpunkt über das Einstellungsmenü (drittes Icon rechts oben) durchzuführen.</p>
 	<p>Details zur Aktivierung der UCS-Lizenz werden im <a href="http://docs.univention.de/handbuch.html#software:appcenter" target="_blank">UCS-Handbuch</a> beschrieben.</p>
 </div>
