--- a/management/univention-management-console-frontend/umc/app/activation.en.html
+++ b/management/univention-management-console-frontend/umc/app/activation.en.html
@@ -1,4 +1,4 @@
-<h1>Aktivierung des UCS-Systems</h1>
+<h1 id="dialog-activation">Aktivierung des UCS-Systems</h1>
 <div style='background:url({path}/activation.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Sie können nun eine gültige E-Mail-Adresse angeben, um das UCS-System für die Verwendung des App Centers freizuschalten. Es wird Ihnen dann in Kürze ein aktualisierter Lizenzschlüssel zugeschickt, der über den Lizenzdialog im Einstellungsmenü eingespielt werden kann.</p>
 	<p>
