--- a/management/univention-management-console-frontend/umc/app/welcome.de.html
+++ b/management/univention-management-console-frontend/umc/app/welcome.de.html
@@ -1,4 +1,4 @@
-<h1>Willkommen bei Univention Management Console</h1>
+<h1 id="dialog-welcome">Willkommen bei Univention Management Console</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Herzlichen Glückwunsch, Sie haben die Einrichtung von Univention Corporate Server (UCS) erfolgreich abgeschlossen und sind nun an Univention Management Console (UMC) angemeldet. UMC ist die zentrale Webanwendung zur komfortablen Domänen- und Rechnerverwaltung in UCS.</p>
 	<p>Waren Sie mit der Einrichtung des Systems zufrieden?</p>
