--- a/management/univention-management-console-frontend/umc/app/feedback.en.html
+++ b/management/univention-management-console-frontend/umc/app/feedback.en.html
@@ -1,15 +1,10 @@
-<h1>Feedback durch Nutzungsstatistiken</h1>
+<h1 id="dialog-feedback">Feedback durch Nutzungsstatistiken</h1>
 <div style='background:url({path}/feedback.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Auf UCS-Evaluationssystemen werden standardmäßig anonyme Statistiken erzeugt und an Univention gesendet. Dies ermöglicht es, UCS beständig an die konkreten Anwenderbedürfnisse anzupassen.</p>
-<!--	<div data-dojo-type="umc/widgets/TitlePane" title="Details zu den Nutzungsstatistiken" data-dojo-props="open:false">
-		<p>Die Statistiken über die Nutzung von UMC erfassen welche Module geöffnet und welche Aktionen (bspw. Anlegen oder Löschen eines Benutzers) durchgeführt werden. Es werden hierbei keine Parameter (bspw. Name des angelegten oder gelöschten Benutzers) gespeichert, sondern lediglich die Art der Aktion. Dies ermöglicht es, häufig genutzte UMC-Module und -Aktionen zu erkennen, um den Arbeitsablauf zielgerichtet zu verbessern.</p>
-		<p>Die Hardware-Informationen werden einmalig erfasst. Zu diesen Informationen gehören bspw. CPU-Typ, Anzahl der CPUs, Größe des Arbeitspeichers oder Art der Festplattencontroller. Dies erlaubt es häufig genutzte Hardware zu ermitteln und zukünftig besser zu unterstützen. Die erfassten Hardware-Informationen können <a href="" target="_blank">unter diesem Link</a> eingesehen werden.</p>
-	</div>-->
-	<!--<p>Einmalig werden auch Hardware-Statistiken erzeugt. Dies kann untenstehend deaktiviert oder aktiviert werden.</p>-->
 	<p>Die Informationen umfassen zum einen UMC-Nutzungsstatistiken sowie einmalig grundlegende Informationen über die Hardware-Konfiguration. Details zur Erfassung sowie zur Deaktivierung der Statistiken werden im <a href="http://docs.univention.de/handbuch.html#central-management-umc:piwik" target="_blank">UCS-Handbuch</a> beschrieben.</a>
 	<p>Durch Einspielen einer Kauflizenz werden die Nutzungsstatistiken automatisch deaktiviert.</p>
 	<form style="display:{hardwareStatisticsCheckboxDisplay}">
-		<input name="enablePiwik" id="umc_app_feedback_Checkbox" data-dojo-type="dijit/form/CheckBox" checked/>
+		<input name="enableHardwareStatistics" id="umc_app_feedback_Checkbox" data-dojo-type="dijit/form/CheckBox" checked/>
 		<label for="umc_app_feedback_Checkbox">Einmalige Erfassung von Hardware-Statistiken aktivieren.</label>
 	</form>
 </div>
