--- a/management/univention-management-console-frontend/umc/app/finished.en.html
+++ b/management/univention-management-console-frontend/umc/app/finished.en.html
@@ -1,4 +1,4 @@
-<h1>Ende des Begrüßgungsassistenten</h1>
+<h1 id="dialog-finished">Ende des Begrüßgungsassistenten</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Der Begrüßungsassistent ist nun beendet.</p>
 	<p>Die hier aufgeführten Informationen können zu einem späteren Zeitpunkt in dem Hilfemenü (zweites Icon rechts oben) wieder aufgerufen werden.</p>
