--- a/management/univention-management-console-frontend/umc/app/help.en.html
+++ b/management/univention-management-console-frontend/umc/app/help.en.html
@@ -1,4 +1,4 @@
-<h1>Weiterführende Informationen</h1>
+<h1 id="dialog-help">Weiterführende Informationen</h1>
 <div style='background:url({path}/help.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Detaillierte Informationen zur Verwendung der Univention Management Console finden sich im UCS-Handbuch. Das Handbuch und weitere wichtige Informationen sind unter den folgenden Links abrufbar:</p>
 	<ul>
