--- a/management/univention-management-console-frontend/umc/app/finished.de.html
+++ b/management/univention-management-console-frontend/umc/app/finished.de.html
@@ -1,6 +1,6 @@
-<h1 id="dialog-finished">Ende des Begrüßgungsassistenten</h1>
+<h1>Ende des Begrüßgungsassistenten</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Der Begrüßungsassistent ist nun beendet.</p>
-	<p>Die hier aufgeführten Informationen können zu einem späteren Zeitpunkt in dem Hilfemenü (zweites Icon rechts oben) wieder aufgerufen werden.</p>
-	<p>Die Aktivierung des UCS-Systems kann über den Punkt <i>Lizenz</i> des Einstellungsmenüs (drittes Icon rechts oben) durchgeführt werden.</p>
+	<p>Die hier aufgeführten Informationen können zu einem späteren Zeitpunkt in dem Hilfemenü (oben rechts) wieder aufgerufen werden.</p>
+	<p>Die Aktivierung des UCS-Systems kann über den Punkt <i>UCS-Aktivierung</i> des Einstellungsmenüs (oben rechts) durchgeführt werden.</p>
 </div>
