--- a/management/univention-management-console-frontend/umc/app/about.en.html
+++ b/management/univention-management-console-frontend/umc/app/about.en.html
@@ -1,4 +1,4 @@
-<h1 id="dialog-about">Univention Management Console</h1>
+<h1>Univention Management Console</h1>
 <table style='background:url({path}/about.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<tr>
 		<td>Server</td>
@@ -13,11 +13,11 @@
 		<td>{umc_version}</td>
 	</tr>
 	<tr>
-		<td>Gültigkeitsdatum des SSL-Wurzel-Zertifikats</td>
+		<td>Date of expiry of the SSL root certificate</td>
 		<td>{ssl_validity_root}</td>
 	</tr>
 	<tr>
-		<td>Gültigkeitsdatum des SSL-Rechner-Zertifikats</td>
+		<td>Date of expiry of the SSL certificate for this system</td>
 		<td>{ssl_validity_host}</td>
 	</tr>
 </table>
