--- a/management/univention-management-console-frontend/umc/app/activation.en.html
+++ b/management/univention-management-console-frontend/umc/app/activation.en.html
@@ -1,11 +1,11 @@
-<h1 id="dialog-activation">Aktivierung des UCS-Systems</h1>
+<h1>Activation of Univention Corporate Server</h1>
 <div style='background:url({path}/activation.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
-	<p>Sie können nun eine gültige E-Mail-Adresse angeben, um das UCS-System für die Verwendung des App Centers freizuschalten. Es wird Ihnen dann in Kürze ein aktualisierter Lizenzschlüssel zugeschickt, der über den Lizenzdialog im Einstellungsmenü eingespielt werden kann.</p>
+	<p>You may now enter a valid email address in order to activate the UCS system for usage of the App Center. Within a short time, you will receive an updated license key. This key can then be uploaded via the license dialog in the settings menu (on the top right).
 	<p>
 		<form>
-			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'E-Mail-Adresse'"/>
+			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'Email address'"/>
 		</form>
 	</p>
-	<p>Lassen Sie das Feld frei, um die Aktivierung zu einem späteren Zeitpunkt über das App Center selber durchzuführen.</p>
-	<p>Details zur Aktivierung der UCS-Lizenz werden im <a href="http://docs.univention.de/handbuch.html#software:appcenter" target="_blank">UCS-Handbuch</a> beschrieben.</p>
+	<p style="display:{leaveFieldFreeDisplay}">Leave the field empty to perform the activation at a later point in time via the settings menu.</p>
+	<p>Details about the activation of a UCS license can be found in the <a href="http://docs.univention.de/manual.html#software:appcenter" target="_blank">UCS manual</a>.</p>
 </div>
