--- a/management/univention-management-console-frontend/umc/app/finished.en.html
+++ b/management/univention-management-console-frontend/umc/app/finished.en.html
@@ -1,6 +1,6 @@
-<h1 id="dialog-finished">Ende des Begrüßgungsassistenten</h1>
+<h1>Completion of startup wizard</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
-	<p>Der Begrüßungsassistent ist nun beendet.</p>
-	<p>Die hier aufgeführten Informationen können zu einem späteren Zeitpunkt in dem Hilfemenü (zweites Icon rechts oben) wieder aufgerufen werden.</p>
-	<p>Die Aktivierung des UCS-Systems kann über den Punkt <i>Lizenz</i> des Einstellungsmenüs (drittes Icon rechts oben) oder auch direkt im App-Center durchgeführt werden.</p>
+	<p>The startup wizard has been completed now.</p>
+	<p>All listed information can be accessed at any later point in time via the help menu on the top right.</p>
+	<p>The activation of the UCS system can be performed via the menu item <i>Activation of UCS</i> in the settings menu on the top right.</p>
 </div>
