--- a/management/univention-management-console-frontend/umc/app/welcome.en.html
+++ b/management/univention-management-console-frontend/umc/app/welcome.en.html
@@ -1,18 +1,18 @@
-<h1 id="dialog-welcome">Willkommen bei Univention Management Console</h1>
+<h1>Willkommen bei Univention Management Console</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
-	<p>Herzlichen Glückwunsch, Sie haben die Einrichtung von Univention Corporate Server (UCS) erfolgreich abgeschlossen und sind nun an Univention Management Console (UMC) angemeldet. UMC ist die zentrale Webanwendung zur komfortablen Domänen- und Rechnerverwaltung in UCS.</p>
-	<p>Waren Sie mit der Einrichtung des Systems zufrieden?</p>
+	<p>Congratulations, you have successfully completed the configuration of your Univention Corporate Server (UCS), and you have logged into Univention Management Console (UMC). UMC is the central web application for a comfortable system administration and domain management.</p>
+	<p>Have you been satisfied with the system configuration?</p>
 	<p><form>
 		<div type="radio" data-dojo-type="dijit/form/RadioButton" name="installation_ok" id="umc_app_startup_installation_ok" value="true">
 			<script type="dojo/on" data-dojo-event="click">
 				require('dojo/dom-style').set('umc_app_startup_installation_feedback', 'display', 'none');
 			</script>
-		</div><label for="umc_app_startup_installation_ok"> Alles hat super funktioniert.</label><br/>
+		</div><label for="umc_app_startup_installation_ok"> Everything worked great.</label><br/>
 		<div type="radio" data-dojo-type="dijit/form/RadioButton" name="installation_ok" id="umc_app_startup_installation_not_ok" value="false">
 			<script type="dojo/on" data-dojo-event="click">
 				require('dojo/dom-style').set('umc_app_startup_installation_feedback', 'display', 'block');
 			</script>
-		</div><label for="umc_app_startup_installation_not_ok"> Ich sehe Verbesserungsmöglichkeiten.</label><br/>
+		</div><label for="umc_app_startup_installation_not_ok"> I see potential for improvement.</label><br/>
 	</form></p>
-	<p id="umc_app_startup_installation_feedback" style="display:none"><a href="{feedbackUrl}?umc=StartupDialog" target="_blank">Sagen Sie uns Ihre Meinung!</a></p>
+	<p id="umc_app_startup_installation_feedback" style="display:none"><a href="{feedbackUrl}?umc=StartupDialog" target="_blank">Tell us you opinion!</a></p>
 </div>
