* Bug #30004: added new system notifications, refactored some CSS code into correct files, moved LoginDialog into umc/dialog/, added login messages into login Form
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45515 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/index.html
+++ b/management/univention-management-console-frontend/index.html
@@ -105,6 +105,8 @@
 				</div>
 			</noscript>
 		</div>
+		<div class="umcNotificationTopWrapper">
+		</div>
 		<div id="umc_LoginWrapper" class="umcShowHide" style="position: absolute; height: 100%; width: 100%; display: none;">
 			<div class="umcShowHide" style="height:50%; margin-bottom:-190px;"></div>
 			<div id="umc_LoginDialog" class="umcShowHide dijitDialog dojoxDialog umcLoginDialog">
