--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -108,21 +108,15 @@
 		<div class="bs-footer" id="footer" role="contentinfo">
 			<div class="container">
 				<ul>
+					<li><a href="http://www.univention.de/en/products/ucs/app-catalogue/" data-i18n="apps">App Catalogue</a></li>
+					<li><a href="http://www.univention.de/en/products/" data-i18n="products">Further Products</a></li>
+					<li><a href="http://www.univention.de/en/" data-i18n="univention_website">Univention Website</a></li>
+				</ul>
+				<ul>
+					<li><a href="http://docs.univention.de/en.html" data-i18n="manual">Manual for Univention Corporate Server</a></li>
+					<li><a href="http://sdb.univention.de/" data-i18n="sdb">Univention Support Database</a></li>
 					<li><a href="http://wiki.univention.de/" data-i18n="wiki">Univention Wiki</a></li>
 					<li><a href="http://forum.univention.de/" data-i18n="forum">Univention Forum</a></li>
-					<li><a href="http://sdb.univention.de/" data-i18n="sdb">Univention Support Database</a></li>
-					<li><a href="http://docs.univention.de/en.html" data-i18n="manual">Manual for Univention Corporate Server</a></li>
-				</ul>
-				<ul>
-					<li><a href="http://www.univention.de/en/products/ucs/app-catalogue/" data-i18n="apps">App Catalogue</a></li>
-					<li><a href="http://www.univention.de/en/products/" data-i18n="products">Additional Products</a></li>
-					<li><a href="http://www.univention.de/en/ucs-solutions/" data-i18n="solutions">Solutions based on UCS</a></li>
-				</ul>
-				<ul>
-					<li><a href="http://www.univention.de/en/" data-i18n="univention_website">Univention Website</a></li>
-					<li><a href="http://www.univention.de/en/univention/news/news-releases/" data-i18n="news">News</a></li>
-					<li><a href="http://www.univention.de/en/univention/dates/" data-i18n="dates">Dates</a></li>
-					<li><a href="http://www.univention.de/en/partner/" data-i18n="univention_partner">Univention Partners</a></li>
 				</ul>
 			</div>
     	</div>
