--- a/management/univention-management-console-frontend/index.html
+++ b/management/univention-management-console-frontend/index.html
@@ -96,10 +96,10 @@
 			<div id="univentionLogo"></div>
 			<noscript style="width: 100%;">
 				<div style="margin: 40px auto; width: 50%;">
-					<h1><span style="color: #ff0000;">!</span> A browser with JavaScript enabled is needed in order to use Univention Management Console.</h1>
-					<h1><span style="color: #ff0000;">!</span> Um die Univention Management Console benutzen zu können, wird ein Browser mit JavaScript-Unterstützung benötigt.</h1>
+					<h1>A browser with JavaScript enabled is needed in order to use Univention Management Console.</h1>
+					<h1>Um die Univention Management Console benutzen zu können, wird ein Browser mit JavaScript-Unterstützung benötigt.</h1>
 					<!--[if IE]>
-						<h1>Please check your security settings and add this address to your trusted sites.</h1>
+						<h1 style="margin-top: 100px;">Please check your security settings and add this address to your trusted sites.</h1>
 						<h1>Bitte überprüfen Sie Ihre Sicherheitseinstellungen und fügen Sie diese Addresse in die Liste Ihrer vertrauenswürdigen Seiten hinzu.</h1>
 					<![endif]-->
 				</div>
