* Bug #32613: localize link to wiki.univention.de
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45705 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -115,7 +115,7 @@
 				<ul>
 					<li><a href="http://docs.univention.de/en.html" data-i18n="manual">Manual for Univention Corporate Server</a></li>
 					<li><a href="http://sdb.univention.de/" data-i18n="sdb">Univention Support Database</a></li>
-					<li><a href="http://wiki.univention.de/" data-i18n="wiki">Univention Wiki</a></li>
+					<li><a href="http://wiki.univention.de/index.php?title=Hauptseite" data-i18n="wiki">Univention Wiki</a></li>
 					<li><a href="http://forum.univention.de/" data-i18n="forum">Univention Forum</a></li>
 				</ul>
 			</div>
