--- a/management/univention-management-console-frontend/umc/app/finished.en.html
+++ b/management/univention-management-console-frontend/umc/app/finished.en.html
@@ -1,6 +1,5 @@
 <h1>Completion of startup wizard</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>The startup wizard has been completed now.</p>
-	<p>All listed information can be accessed at any later point in time via the help menu on the top right.</p>
-	<p>The activation of the UCS system can be performed via the menu item <i>Activation of UCS</i> in the settings menu on the top right.</p>
+	<p>All listed information can be accessed at any later point in time via the help as well as the settings menu on the top right.</p>
 </div>
