--- a/management/univention-management-console-frontend/umc/app/welcome.en.html
+++ b/management/univention-management-console-frontend/umc/app/welcome.en.html
@@ -1,7 +1,7 @@
-<h1>Willkommen bei Univention Management Console</h1>
+<h1>Welcome at Univention Management Console</h1>
 <div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<p>Congratulations, you have successfully completed the configuration of your Univention Corporate Server (UCS), and you have logged into Univention Management Console (UMC). UMC is the central web application for a comfortable system administration and domain management.</p>
-	<p>Have you been satisfied with the system configuration?</p>
+	<p>Are you satisfied with the system configuration?</p>
 	<p><form>
 		<div type="radio" data-dojo-type="dijit/form/RadioButton" name="installation_ok" id="umc_app_startup_installation_ok" value="true">
 			<script type="dojo/on" data-dojo-event="click">
