--- a/management/univention-management-console-frontend/umc/app/activation.de.html
+++ b/management/univention-management-console-frontend/umc/app/activation.de.html
@@ -3,9 +3,9 @@
 	<p>Sie können nun eine gültige E-Mail-Adresse angeben, um das UCS-System für die Verwendung des App Centers freizuschalten. Es wird Ihnen dann in Kürze ein aktualisierter Lizenzschlüssel zugeschickt, der über den Lizenzdialog im Einstellungsmenü (oben rechts) eingespielt werden kann.</p>
 	<p>
 		<form>
-			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'E-Mail-Adresse'"/>
+			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'E-Mail-Address', regExp:'.+@.+', invalidMessage:'Keine gültige E-Mail-Adresse.'"/>
 		</form>
 	</p>
 	<p style="display:{leaveFieldFreeDisplay}">Lassen Sie das Feld frei, um die Aktivierung zu einem späteren Zeitpunkt über das Einstellungsmenü durchzuführen.</p>
-	<p>Details zur Aktivierung der UCS-Lizenz werden im <a href="http://docs.univention.de/handbuch.html#software:appcenter" target="_blank">UCS-Handbuch</a> beschrieben.</p>
+	<p>Details zur Aktivierung der UCS-Lizenz werden im <a href="http://docs.univention.de/handbuch-{version}.html#software:appcenter" target="_blank">UCS-Handbuch</a> beschrieben.</p>
 </div>
