--- a/management/univention-management-console-frontend/umc/app/feedback.en.html
+++ b/management/univention-management-console-frontend/umc/app/feedback.en.html
@@ -1,7 +1,7 @@
 <h1>Feedback via usage statistics</h1>
 <div style='background:url({path}/feedback.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
-	<p>On UCS evaluation systems, anonymous usage statistics are by default created and sent to Univention. This allows to continously adapt UCS to suit the practical needs of its users.</p>
-	<p>The information consists of UMC usage statistics and a one-time statistic on the hardware configuration. Details about the usage statistics and about its deactivation can be found in the <a href="http://docs.univention.de/manual.html#central-management-umc:piwik" target="_blank">UCS manual</a>.</a>
+	<p>On UCS evaluation systems, anonymous usage statistics are created by default and sent to Univention. This allows to continously adapt UCS to suit the practical needs of its users.</p>
+	<p>The information consists of UMC usage statistics and a one-time statistic on the hardware configuration. Details about the usage statistics and about its deactivation can be found in the <a href="http://docs.univention.de/manual-{version}.html#central-management-umc:piwik" target="_blank">UCS manual</a>.</a>
 	<p>Usage statistics are automatically deactivated when importing a commercial license.</p>
 	<form style="display:{hardwareStatisticsCheckboxDisplay}">
 		<input name="enableHardwareStatistics" id="umc_app_feedback_Checkbox" data-dojo-type="dijit/form/CheckBox" checked/>
