* Bug #30811: added email validation in activiation dialogue, fixed typos
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45833 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/app/activation.de.html
+++ b/management/univention-management-console-frontend/umc/app/activation.de.html
@@ -3,7 +3,7 @@
 	<p>Sie können nun eine gültige E-Mail-Adresse angeben, um das UCS-System für die Verwendung des App Centers freizuschalten. Es wird Ihnen dann in Kürze ein aktualisierter Lizenzschlüssel zugeschickt, der über den Lizenzdialog im Einstellungsmenü (oben rechts) eingespielt werden kann.</p>
 	<p>
 		<form>
-			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'E-Mail-Address', regExp:'.+@.+', invalidMessage:'Keine gültige E-Mail-Adresse.'"/>
+			<input name="email" id="umc_app_activation_email" data-dojo-type="umc/widgets/TextBox" data-dojo-props="inlineLabel:'E-Mail-Addresse', regExp:'.+@.+', invalidMessage:'Keine gültige E-Mail-Adresse.'"/>
 		</form>
 	</p>
 	<p style="display:{leaveFieldFreeDisplay}">Lassen Sie das Feld frei, um die Aktivierung zu einem späteren Zeitpunkt über das Einstellungsmenü durchzuführen.</p>
