--- a/management/univention-management-console-frontend/umc/app/help.de.html
+++ b/management/univention-management-console-frontend/umc/app/help.de.html
@@ -1,9 +1,9 @@
 <h1>Weiterführende Informationen</h1>
 <div style='background:url({path}/help.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
-	<p>Detaillierte Informationen zur Verwendung von Univention Management Console befinden sich im UCS-Handbuch. Das Handbuch und weitere wichtige Informationen sind unter den folgenden Links abrufbar:</p>
+	<p>Detaillierte Informationen zur Verwendung der Univention Management Console befinden sich im UCS-Handbuch. Das Handbuch und weitere wichtige Informationen sind unter den folgenden Links abrufbar:</p>
 	<ul>
 		<li><a href="http://docs.univention.de/de/ucs.html" target="_blank">Online-Dokumentation</a></li>
 		<li><a href="http://wiki.univention.de" target="_blank">Univention Wiki</a></li>
-		<li><a href="http://www.univention.de/download-und-support/community/" target="_blank">Community und Support</a></li>
+		<li><a href="http://www.univention.de/download-und-support/support/community/" target="_blank">Community und Support</a></li>
 	</ul>
 </div>
