--- a/management/univention-management-console-frontend/umc/app/help.en.html
+++ b/management/univention-management-console-frontend/umc/app/help.en.html
@@ -1,9 +1,9 @@
-<h1>Further Informationen</h1>
+<h1>Further Information</h1>
 <div style='background:url({path}/help.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
-	<p>Detailed usage information about Univention Management Console can be found in the UCS manual. The manual as well as further important information are available via the following links:</p>
+	<p>Detailed usage information on Univention Management Console can be found in the UCS manual. The manual as well as further important information are available via the following links:</p>
 	<ul>
 		<li><a href="http://docs.univention.de/en/ucs.html" target="_blank">Online documentation</a></li>
 		<li><a href="http://wiki.univention.de/index.php?title=Hauptseite" target="_blank">Univention Wiki</a></li>
-		<li><a href="http://www.univention.com/download-und-support/community/" target="_blank">Community and support</a></li>
+		<li><a href="http://www.univention.com/download-und-support/support/community/" target="_blank">Community and support</a></li>
 	</ul>
 </div>
