* Bug #30811: fixed typos
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45841 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/index.html
+++ b/management/univention-management-console-frontend/index.html
@@ -100,7 +100,7 @@
 					<h1>Um die Univention Management Console benutzen zu können, wird ein Browser mit JavaScript-Unterstützung benötigt.</h1>
 					<!--[if IE]>
 						<h1 style="margin-top: 100px;">Please check your security settings and add this address to your trusted sites.</h1>
-						<h1>Bitte überprüfen Sie Ihre Sicherheitseinstellungen und fügen Sie diese Addresse in die Liste Ihrer vertrauenswürdigen Seiten hinzu.</h1>
+						<h1>Bitte überprüfen Sie Ihre Sicherheitseinstellungen und fügen Sie diese Address in die Liste Ihrer vertrauenswürdigen Seiten hinzu.</h1>
 					<![endif]-->
 				</div>
 			</noscript>
