* Bug #33083: adapted package to changes in UCS 3.2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46099 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/usr/share/univention-management-console-frontend/js/umc/app/login.html
+++ b/test/univention-demo-configuration/usr/share/univention-management-console-frontend/js/umc/app/login.html
@@ -5,16 +5,16 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<style type="text/css">
-			@import url("../dojo/resources/dojo.css");
-			@import url("../dijit/themes/umc/umc.css");
+			@import url("../../dojo/resources/dojo.css");
+			@import url("../../dijit/themes/umc/umc.css");
 		</style>
 
 		<!--[if IE 8]>
-		  <link rel="stylesheet" href="../dijit/themes/umc/ie/ie8.css" type="text/css" media="screen" title="IE 8 CSS" />
+		  <link rel="stylesheet" href="../../dijit/themes/umc/ie/ie8.css" type="text/css" media="screen" title="IE 8 CSS" />
 		<![endif]-->
 
 		<!--[if IE 9]>
-		  <link rel="stylesheet" href="../dijit/themes/umc/ie/ie9.css" type="text/css" media="screen" title="IE 9 CSS" />
+		  <link rel="stylesheet" href="../../dijit/themes/umc/ie/ie9.css" type="text/css" media="screen" title="IE 9 CSS" />
 		<![endif]-->
 
 		<script type="text/javascript">
@@ -22,7 +22,7 @@
 				async: true
 			};
 		</script>
-		<script type="text/javascript" src="../dojo/dojo.js"></script>
+		<script type="text/javascript" src="../../dojo/dojo.js"></script>
 		<script type="text/javascript">
 			var state = "unloaded";
 			require(["dojo/parser", "umc/widgets/SubmitButton", "dojo/domReady!"], function(parser, ready){
