* Bug #34117: Also the the LDAP Base DN if the license is "Free for personal use"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48081 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/js/udm/license.html
+++ b/management/univention-management-console-module-udm/umc/js/udm/license.html
@@ -1,6 +1,10 @@
 <h1>{title}</h1>
 <table>
   <tr>
+	<td>{labelLicenseType}</td>
+	<td>{licenseType}</td>
+  </tr>
+  <tr>
 	<td>{labelBase}</td>
 	<td>{base}</td>
   </tr>
