--- a/management/univention-management-console-module-udm/umc/js/udm/license_v2.html
+++ b/management/univention-management-console-module-udm/umc/js/udm/license_v2.html
@@ -1,6 +1,10 @@
 <h1>{title}</h1>
 <table>
   <tr>
+	<td>{labelLicenseType}</td>
+	<td>{licenseType}</td>
+  </tr>
+  <tr>
 	<td>{labelBase}</td>
 	<td>{base}</td>
   </tr>
