* Add HTML Metatags to forbid caching of vnc_auto.html. This avoids certificate problems with https connections while using Internet Explorer (Bug #33968)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49297 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-novnc/vnc_auto.html
+++ b/virtualization/univention-novnc/vnc_auto.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!--
+    Deactivate caching for this file to avoid certificate problems when using
+    Internet Explorer 11.
+    Bug #33968
+    -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <!--
     noVNC example: simple example using default UI
