Bug #34484: * Adjust CSS rules to integrate dijit/form/Select * Use Dojo async attribute * If UMC overview is disabled and a startup module is specified, only load   AMD modules of the startup UMC module * Allow dynamic reloading of translations * Added radio button widget * Added tools.defer() * Fixed validation of Form * Fixed vertical scrolling issues with the Grid in Firefox * Allow configuration of LabelPanes via the widget property 'labelConf' * TextBox: allow dynamic changing of 'inlineLabel' * Wizard: added convenience method isPageVisible()
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51843 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/index.html
+++ b/management/univention-management-console-frontend/index.html
@@ -65,31 +65,32 @@
 				isDebug: false,
 				debugAtAllCosts: false,
 				locale: locale,
-				async: true
+				async: true,
+				deps: [],
+				callback: function() {
+					require(["dojo/parser", "umc/app", "umc/tools", "umc/widgets/ContainerWidget", "dojo/domReady!"], function(parser, app, tools) {
+						// parse the DOM tree
+						parser.parse();
+
+						// set the version of the UMC frontend
+						tools.status('version', '%VERSION%');
+
+						// start the application when everything has been loaded
+						app.start({
+							username: getQuery('username'),
+							password: getQuery('password'),
+							module: getQuery('module'),
+							flavor: getQuery('flavor'),
+							overview: getQuery('overview', true),
+							width: getQuery('width'),
+							displayUsername: getQuery('displayUsername', true)
+						});
+					});
+				}
 			};
 			//-->
 		</script>
-		<script type="text/javascript" src="js%HASH%/dojo/dojo.js%JSSUFFIX%"></script>
-		<script type="text/javascript">
-			require(["dojo/parser", "umc/app", "umc/tools", "umc/widgets/ContainerWidget", "dojo/domReady!"], function(parser, app, tools) {
-				// parse the DOM tree
-				parser.parse();
-
-				// set the version of the UMC frontend
-				tools.status('version', '%VERSION%');
-
-				// start the application when everything has been loaded
-				app.start({
-					username: getQuery('username'),
-					password: getQuery('password'),
-					module: getQuery('module'),
-					flavor: getQuery('flavor'),
-					overview: getQuery('overview', true),
-					width: getQuery('width'),
-					displayUsername: getQuery('displayUsername', true)
-				});
-			});
-		</script>
+		<script type="text/javascript" async src="js%HASH%/dojo/dojo.js%JSSUFFIX%"></script>
 	</head>
 	<body class="umc">
 		<div id="univentionLogoWrapper">
