Bug #34484: * take ipv6/gateway into account * remove 'back' button on last wizard page * let appliance page refer to UMC without header and without overview page
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52065 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/var/www/ucs-overview/initialsetup.html
+++ b/base/univention-system-setup/var/www/ucs-overview/initialsetup.html
@@ -76,7 +76,7 @@
 					<span class="initialsetuptext" data-i18n="setupText"></span>
 					<span class="initialsetuptext" data-i18n="setupText2"></span>
 					<span class="initialsetupcode" data-i18n="setupSshCommand"></span>
-					<span id="initialsetuplink" class="initialsetuptext"><span data-i18n="setupText3"></span><a href="/univention-management-console/?module=setup&username=root" data-i18n="setupLinkText"></a></span>
+					<span id="initialsetuplink" class="initialsetuptext"><span data-i18n="setupText3"></span><a href="/univention-management-console/?module=setup&overview=false&displayUsername=false&username=root" data-i18n="setupLinkText"></a></span>
 					</div>
 				</div>
 			</div>
