--- a/management/univention-management-console-frontend/login.html
+++ b/management/univention-management-console-frontend/login.html
@@ -1,79 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" style="background:none">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<style type="text/css">
-			@import url("../../dojo/resources/dojo.css");
-			@import url("../../dijit/themes/umc/umc.css");
-		</style>
-
-		<!--[if IE 8]>
-		  <link rel="stylesheet" href="../../dijit/themes/umc/ie/ie8.css" type="text/css" media="screen" title="IE 8 CSS" />
-		<![endif]-->
-
-		<!--[if IE 9]>
-		  <link rel="stylesheet" href="../../dijit/themes/umc/ie/ie9.css" type="text/css" media="screen" title="IE 9 CSS" />
-		<![endif]-->
-
 		<script type="text/javascript">
-			var dojoConfig = {
-				async: true
-			};
-		</script>
-		<script type="text/javascript" src="../../dojo/dojo.js"></script>
-		<script type="text/javascript">
-			var state = "unloaded";
-			require(["dojo/parser", "umc/widgets/SubmitButton", "dojo/domReady!"], function(parser, ready){
-				parser.parse();
-				state = "loaded";
-			});
+			var state = "loaded";
 		</script>
 	</head>
-	<body class="umc">
-		<form id="umc_Form" name="umc_Form" action="blank.html" method="post" class="umcLoginForm" autocomplete="on">
-			<div id="umc_OuterLabelPane_Username" class="umcLabelPane">
-				<div class="umcLabelPaneLabelNode umcLabelPaneLabeNodeTop">
-					<label id="umc_LabelPane_Username" for="umc_UsernameInput"></label>
-				</div>
-				<div id="umc_UsernameContainer" class="dijit dijitReset dijitInlineTable dijitLeft umcTextBox umcFormWidget dijitTextBox dijitValidationTextBox">
-					<div class="dijitReset dijitInputField dijitInputContainer">
-						<input id="umc_UsernameInput" name="username" type="text" class="dijitReset dijitInputInner" />
-					</div>
-				</div>
-			</div>
-			<div id="umc_OuterLabelPane_Password" class="umcLabelPane">
-				<div class="umcLabelPaneLabelNode umcLabelPaneLabeNodeTop">
-					<label id="umc_LabelPane_Password" for="umc_PasswordInput"></label>
-				</div>
-				<div id="umc_PasswordContainer" class="dijit dijitReset dijitInlineTable dijitLeft umcPasswordBox umcFormWidget dijitTextBox dijitValidationTextBox">
-					<div class="dijitReset dijitInputField dijitInputContainer">
-						<input id="umc_PasswordInput" name="password" type="password" class="dijitReset dijitInputInner" />
-					</div>
-				</div>
-			</div>
-			<div id="umc_OuterLabelPane_NewPassword" class="umcLabelPane dijitHidden">
-				<div class="umcLabelPaneLabelNode umcLabelPaneLabeNodeTop">
-					<label id="umc_LabelPane_NewPassword" for="umc_NewPasswordInput"></label>
-				</div>
-				<div id="umc_NewPasswordContainer" class="dijit dijitReset dijitInlineTable dijitLeft umcPasswordInputBox umcFormWidget dijitTextBox dijitValidationTextBox">
-					<div class="dijitReset dijitInputField dijitInputContainer">
-						<input id="umc_NewPasswordInput" name="new_password" type="password" class="dijitReset dijitInputInner" />
-					</div>
-				</div>
-			</div>
-			<div id="umc_OuterLabelPane_NewPasswordRetype" class="umcLabelPane dijitHidden">
-				<div class="umcLabelPaneLabelNode umcLabelPaneLabeNodeTop">
-					<label id="umc_LabelPane_NewPasswordRetype" for="umc_NewPasswordRetypeInput"></label>
-				</div>
-				<div id="umc_NewPasswordRetypeContainer" class="dijit dijitReset dijitInlineTable dijitLeft umcPasswordInputBox umcFormWidget dijitTextBox dijitValidationTextBox">
-					<div class="dijitReset dijitInputField dijitInputContainer">
-						<input id="umc_NewPasswordRetypeInput" type="password" class="dijitReset dijitInputInner" />
-					</div>
-				</div>
-			</div>
-			<button id="umc_SubmitButton" name="submit" type="submit" data-dojo-type="umc/widgets/SubmitButton"></button>
+	<body>
+		<form id="umcLoginForm" name="umcLoginForm" action="blank.html" method="post" class="umcLoginForm" autocomplete="on">
+			<label for="umcLoginUsername">
+				<input placeholder="Username" id="umcLoginUsername" name="username" type="text" autocomplete="on"/>
+			</label>
+			<label for="umcLoginPassword">
+				<input placeholder="Password" id="umcLoginPassword" name="password" type="password" autocomplete="on"/>
+				<input id="umcLoginSubmit" type="submit" name="submit" value="Login"/>
+			</label>
+		</form>
+		<form id="umcNewPasswordForm" name="umcLoginForm" action="blank.html" method="post" class="umcLoginForm" style="display: none;" autocomplete="off">
+			<label for="umcLoginNewPassword">
+				<input placeholder="New Password" id="umcLoginNewPassword" name="new_password" type="password"/>
+			</label>
+			<label for="umcLoginNewPasswordRetype">
+				<input placeholder="New Password (retype)" id="umcLoginNewPasswordRetype" type="password"/>
+				<input type="submit" name="submit" value="Login"/>
+			</label>
 		</form>
 	</body>
 </html>
