* Bug #35654: adapt overview=false mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54149 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/index.html
+++ b/management/univention-management-console-frontend/index.html
@@ -76,8 +76,7 @@
 							module: getQuery('module'),
 							flavor: getQuery('flavor'),
 							overview: getQuery('overview', true),
-							width: getQuery('width'),
-							displayUsername: getQuery('displayUsername', true)
+							width: getQuery('width')
 						});
 					});
 				}
