* Bug #35654: remove extra space from LabelPanes, update browser compatibility list, fix background of "About UMC" dialog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54257 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/app/about.de.html
+++ b/management/univention-management-console-frontend/umc/app/about.de.html
@@ -1,5 +1,5 @@
 <h1>Univention Management Console</h1>
-<table style='background:url({path}/about.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<table style='background:url({path}/about.png) no-repeat; border-collapse: separate; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<tr>
 		<td>Server</td>
 		<td>{server}</td>
