--- a/management/univention-management-console-frontend/umc/app/about.en.html
+++ b/management/univention-management-console-frontend/umc/app/about.en.html
@@ -1,5 +1,5 @@
 <h1>Univention Management Console</h1>
-<table style='background:url({path}/about.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<table style='background:url({path}/about.png) no-repeat; border-collapse: separate; background-position:5px 5px; padding-left:165px; min-height:160px;'>
 	<tr>
 		<td>Server</td>
 		<td>{server}</td>
